fix reel height variation, resources spacing

--- a/newamericadotorg/assets/scss/pages/home/_panels.scss
+++ b/newamericadotorg/assets/scss/pages/home/_panels.scss
@@ -67,6 +67,10 @@
     height: 90px;
   }
 
+  &.share-our-space > *:nth-child(2){
+    height: 270px;
+  }
+
   @include media-breakpoint(tablet){
     height: 475px;
     overflow: hidden;
